tests/chapter_14/invalid_types/assign_wrong_pointer_type.c
int main(void)
{
    double *d = 0;
    long *l = 0;
    l = d;
    return 0;
}